--- a/scss/style.scss
+++ b/scss/style.scss
@@ -326,4 +326,5 @@ main .contentboxUno:hover, main .contentboxDos:hover, main .contentboxTres:hover
   .textContainerTres {
     margin: 10px auto;
   }
-}/*# sourceMappingURL=estilo.css.map */
+}
+ 
