--- a/css/style.css
+++ b/css/style.css
@@ -10,38 +10,42 @@ header {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  background-color: #e6dad4;
+  background-color: rgba(230, 218, 212, 0.3);
 }
-
 header .logoKeramikeUno {
   position: relative;
   right: 420px;
   height: 140px;
 }
-
 header .contentList {
   display: flex;
   list-style: none;
   padding: 0;
   margin: 20px;
 }
-
 header .contentList li {
   margin-right: 100px;
   display: inline-block;
 }
-
-header .dropdown-toggle::after {
-  display: none;
-}
-
-header a {
+header .contentList li a {
   text-decoration: none;
-  color: #333;
+  color: #0c0b0b;
   font-size: 20px;
   font-weight: bold;
 }
-
+header .contentImgIconos {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  margin-right: 10px;
+}
+header .fb {
+  width: 30px;
+  margin: 20px;
+}
+header .ig {
+  width: 30px;
+}
 header .contentInicio {
   transition: transform 0.5s ease-in-out;
 }
@@ -66,20 +70,11 @@ header .contentContacto:hover {
   transform: scale(1.5);
 }
 
-header .contentImgIconos {
-  display: flex;
-  align-items: center;
-  margin-left: 20px;
-  margin-right: 10px;
-}
-
-/* Estilos de secciones principales */
+/* Estilos de secciones principales MENU*/
 main {
   padding: 0px;
   text-align: center;
-  /* Estilos de cada cuadro de contenido */
 }
-
 main h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
@@ -94,7 +89,6 @@ main h1 {
   margin-top: 10px;
   text-shadow: -3px 5px 3px rgba(0, 0, 0, 0.2);
 }
-
 main .carousel-inner {
   margin-top: 20px;
   width: 100%;
@@ -103,21 +97,25 @@ main .carousel-inner {
   object-fit: cover;
   transition-duration: 3s;
 }
-
 main .contentTodo {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
 }
-
-main .contentboxUno, main .contentboxDos, main .contentboxTres {
+main .contentboxUno,
+main .contentboxDos,
+main .contentboxTres {
   flex-basis: 30%;
-  padding: 20px;
-  background-color: #41738e;
-  border-radius: 15px;
+  padding: 25px;
+  background-color: rgba(65, 115, 142, 0.5);
+  border-radius: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
-main .contentboxUno:hover, main .contentboxDos:hover, main .contentboxTres:hover {
+.contentboxUno:hover,
+.contentboxDos:hover,
+.contentboxTres:hover {
   animation: vibrate 0.3s infinite;
 }
 
@@ -144,7 +142,6 @@ main .contentboxUno:hover, main .contentboxDos:hover, main .contentboxTres:hover
   justify-content: flex-end;
   align-items: center;
 }
-
 .contentRight .textContainerUno {
   margin-right: 160px;
   margin-bottom: 120px;
@@ -154,11 +151,9 @@ main .contentboxUno:hover, main .contentboxDos:hover, main .contentboxTres:hover
   border: 3px solid #3380aa;
   border-radius: 15px;
 }
-
 .contentRight .tittleTaller {
   font-size: 24px;
 }
-
 .contentRight .imgTaller {
   width: 600px;
   margin-top: 10px;
@@ -173,25 +168,19 @@ main .contentboxUno:hover, main .contentboxDos:hover, main .contentboxTres:hover
   margin-top: 40px;
   text-align: center;
 }
-
-/* Estilos para el contenedor de textContainerDos */
-.textContainerDos {
+.contentLeft .textContainerDos {
   flex: 2;
   border: 3px solid #3380aa;
   border-radius: 15px;
 }
-
-/* Estilos para el contenedor de textContainerTres */
-.textContainerTres {
+.contentLeft .textContainerTres {
   flex: 2;
   margin-top: 220px;
   margin-right: 160px;
   border: 3px solid #3380aa;
   border-radius: 15px;
 }
-
-/* Estilos para la imagen de los pinceles */
-.imgPincel {
+.contentLeft .imgPincel {
   width: 600px;
   margin-top: 10px;
   border-radius: 15px;
@@ -210,16 +199,13 @@ main .contentboxUno:hover, main .contentboxDos:hover, main .contentboxTres:hover
   padding: 20px;
   margin-right: 600px;
 }
-
 .content__total .contentTittleNos {
   margin-left: 45px;
   margin-bottom: 15px;
 }
-
 .content__total .contentFotoNosotros {
   border-radius: 10px;
 }
-
 .content__total .contentTextNosotros {
   width: 300px;
   border: 3px solid #3380aa;
@@ -228,57 +214,49 @@ main .contentboxUno:hover, main .contentboxDos:hover, main .contentboxTres:hover
   margin-top: 50px;
   margin-bottom: 20px;
 }
-
 .content__total .contentFotoFrasco {
-  position: absolute;
-  bottom: 130px;
-  top: 140px;
-  right: 0;
+  position: relative;
+  margin-left: 800px;
 }
-
 .content__total .contentFotoFrasco img {
-  height: 200%;
-  width: 100%;
+  height: 550px;
+  width: 500px;
 }
 
 /* Estilos de secciones principales CONTACTO */
 .contentPartUno__contacto {
   text-align: center;
   padding: 20px;
-  background-color: #c49192;
+  background-color: rgba(196, 145, 146, 0.5);
 }
-
 .contentPartUno__contacto .titulo__contactoUno {
   font-size: 24px;
   color: #030303;
   margin-top: 20px;
   margin-bottom: 30px;
 }
-
 .contentPartUno__contacto .textUno__contacto {
   font-size: 16px;
-  /* Tamaño de fuente del texto */
   color: #0e0d0d;
-  /* Color del texto */
 }
 
-.contentPartUno__contacto .ubicacionTituloDos__contacto {
-  text-align: center;
-  padding: 20px;
+.ubicacionTituloDos__contacto {
+  padding: 10px;
   background-color: #c2b4b4;
-  /* Color de fondo */
   margin-top: 20px;
 }
 
-.contentPartUno__contacto .contactRow {
-  display: flex;
+.content_horario_direccion {
+  margin-left: 500px;
+  margin-bottom: 20px;
 }
-
-.contentEnd {
-  text-align: center;
-  background-color: #c49192;
-  padding: 20px;
-  margin-top: 25px;
+.content_horario_direccion .contentHorario {
+  border-radius: 10px;
+  width: 320px;
+}
+.content_horario_direccion .contentDireccion {
+  border-radius: 10px;
+  width: 320px;
 }
 
 .contentForm {
@@ -287,35 +265,18 @@ main .contentboxUno:hover, main .contentboxDos:hover, main .contentboxTres:hover
   margin: auto;
   gap: 30px;
 }
-
-.contentTerminos {
-  display: flex;
-  gap: 10px;
-}
-
-.contentMasInfo {
+.contentForm .contentMasInfo {
   text-align: center;
 }
-
-.contentGoogleMaps {
+.contentForm .contentGoogleMaps {
   margin-top: 15px;
   margin-left: 380px;
   margin-right: 10px;
   height: 400px;
 }
-
-.contentHorario {
-  margin-top: 100px;
-  margin-left: 250px;
-  border: 3px solid #41738e;
-  border-radius: 10px;
-}
-
-.contentDireccion {
-  margin-top: 100px;
-  margin-left: 250px;
-  border: 3px solid #41738e;
-  border-radius: 10px;
+.contentForm .contentTerminos {
+  display: flex;
+  gap: 10px;
 }
 
 .dropdown {
@@ -323,38 +284,72 @@ main .contentboxUno:hover, main .contentboxDos:hover, main .contentboxTres:hover
 }
 
 @media (max-width: 768px) {
-  .contentList {
+  header {
+    justify-content: flex-end;
+  }
+  .logoKeramikeUno {
+    left: -70px;
+  }
+  .contentListDeso {
+    display: none;
+  }
+  .contentImgIconos {
     display: none;
   }
   .dropdown {
     display: block;
+    margin-right: 10px;
   }
   .dropdown button {
-    background: transparent;
-    border: none;
+    background-color: transparent;
     color: #000000;
+    border: none;
+    width: 50px;
   }
-  .contentTodo {
-    display: block;
-    padding: 20px;
+  .dropdown-toggle::after {
+    display: none;
   }
-  .contentboxUno, .contentboxDos {
-    margin-bottom: 10px;
-  }
-  .contentRight {
-    display: block;
-    padding: 10px;
-  }
-  .textContainerUno {
-    margin: auto;
-  }
-  .contentLeft {
-    display: block;
-    padding: 10px;
-  }
-  .textContainerTres {
-    margin: 10px auto;
+  .dropdown-menu {
+    display: none;
   }
 }
+.contentTodo {
+  display: block;
+  padding: 20px;
+}
+
+.contentboxUno,
+.contentboxDos, .contentboxTres {
+  margin-bottom: 10px;
+  color: rgb(14, 13, 13);
+}
+
+.contentRight {
+  display: block;
+  padding: 10px;
+}
+
+.contentLeft {
+  display: block;
+  padding: 10px;
+}
+
+.textContainerTres {
+  margin: 10px auto;
+}
+
+.content__total {
+  margin-right: 0px;
+}
+
+.contentPartUno__contacto {
+  background-color: rgba(196, 145, 146, 0.3);
+}
+
+.content_horario_direccion {
+  margin-left: 230px;
+}
+
+
 
 /*# sourceMappingURL=style.css.map */
