--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 * {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -6,116 +7,150 @@
 }
 
 /* Estilos para el menú del encabezado */
+
 header {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  background-color: #e6dad4;
+  background-color: rgb(230, 218, 212, 0.3);
+
+  .logoKeramikeUno {
+    position: relative;
+    right: 420px;
+    height: 140px;
+  }
+
+  .contentList {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 20px;
+
+    li {
+      margin-right: 100px;
+      display: inline-block;
+
+      a {
+        text-decoration: none;
+        color: #0c0b0b;
+        font-size: 20px;
+        font-weight: bold;
+      }
+    }
+  }
+
+  .contentImgIconos {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+    margin-right: 10px;
+  }
+
+  .fb {
+    width: 30px;
+    margin: 20px;
+  }
+
+  .ig {
+    width: 30px;
+  }
+
+  .contentInicio {
+    transition: transform 0.5s ease-in-out;
+  }
 }
-header .logoKeramikeUno {
-  position: relative;
-  right: 420px;
-  height: 140px;
-}
-header .contentList {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 20px;
-}
-header .contentList li {
-  margin-right: 100px;
-  display: inline-block;
-}
-header .dropdown-toggle::after {
-  display: none;
-}
-header a {
-  text-decoration: none;
-  color: #333;
-  font-size: 20px;
-  font-weight: bold;
-}
-header .contentInicio {
-  transition: transform 0.5s ease-in-out;
-}
+
 header .contentInicio:hover {
   transform: scale(1.5);
 }
+
 header .contentNosotros {
   transition: transform 0.5s ease-in-out;
 }
+
 header .contentNosotros:hover {
   transform: scale(1.5);
 }
+
 header .contentContacto {
   transition: transform 0.5s ease-in-out;
 }
+
 header .contentContacto:hover {
   transform: scale(1.5);
 }
-header .contentImgIconos {
-  display: flex;
-  align-items: center;
-  margin-left: 20px;
-  margin-right: 10px;
-}
 
-/* Estilos de secciones principales */
+
+/* Estilos de secciones principales MENU*/
 main {
   padding: 0px;
   text-align: center;
-  /* Estilos de cada cuadro de contenido */
+
+  h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    letter-spacing: 4.4px;
+    word-spacing: 1.2px;
+    color: #000000;
+    font-weight: 700;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: uppercase;
+    margin-top: 10px;
+    text-shadow: -3px 5px 3px rgba(0, 0, 0, 0.2);
+  }
+
+  .carousel-inner {
+    margin-top: 20px;
+    width: 100%;
+    height: 500px;
+    -o-object-fit: cover;
+    object-fit: cover;
+    transition-duration: 3s;
+  }
+
+  .contentTodo {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
+
+  .contentboxUno,
+  .contentboxDos,
+  .contentboxTres {
+    flex-basis: 30%;
+    padding: 25px;
+    background-color: rgb(65, 115, 142, 0.5);
+    border-radius: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
-main h1 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  letter-spacing: 4.4px;
-  word-spacing: 1.2px;
-  color: #000000;
-  font-weight: 700;
-  text-decoration: none;
-  font-style: normal;
-  font-variant: normal;
-  text-transform: uppercase;
-  margin-top: 10px;
-  text-shadow: -3px 5px 3px rgba(0, 0, 0, 0.2);
-}
-main .carousel-inner {
-  margin-top: 20px;
-  width: 100%;
-  height: 500px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  transition-duration: 3s;
-}
-main .contentTodo {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
-}
-main .contentboxUno, main .contentboxDos, main .contentboxTres {
-  flex-basis: 30%;
-  padding: 20px;
-  background-color: #41738e;
-  border-radius: 15px;
-}
-main .contentboxUno:hover, main .contentboxDos:hover, main .contentboxTres:hover {
+
+.contentboxUno:hover,
+.contentboxDos:hover,
+.contentboxTres:hover {
   animation: vibrate 0.3s infinite;
 }
+
 @keyframes vibrate {
   0% {
     transform: translateX(0);
   }
+
   25% {
     transform: translateX(5px);
   }
+
   50% {
     transform: translateX(0);
   }
+
   75% {
     transform: translateX(5px);
   }
+
   100% {
     transform: translateX(0);
   }
@@ -126,23 +161,26 @@ main .contentboxUno:hover, main .contentboxDos:hover, main .contentboxTres:hover
   display: flex;
   justify-content: flex-end;
   align-items: center;
-}
-.contentRight .textContainerUno {
-  margin-right: 160px;
-  margin-bottom: 120px;
-  margin-left: 100px;
-  opacity: 10;
-  text-align: center;
-  border: 3px solid #3380aa;
-  border-radius: 15px;
-}
-.contentRight .tittleTaller {
-  font-size: 24px;
-}
-.contentRight .imgTaller {
-  width: 600px;
-  margin-top: 10px;
-  border-radius: 15px;
+
+  .textContainerUno {
+    margin-right: 160px;
+    margin-bottom: 120px;
+    margin-left: 100px;
+    opacity: 10;
+    text-align: center;
+    border: 3px solid #3380aa;
+    border-radius: 15px;
+  }
+
+  .tittleTaller {
+    font-size: 24px;
+  }
+
+  .imgTaller {
+    width: 600px;
+    margin-top: 10px;
+    border-radius: 15px;
+  }
 }
 
 /* Estilos para el contenedor principal */
@@ -152,29 +190,26 @@ main .contentboxUno:hover, main .contentboxDos:hover, main .contentboxTres:hover
   align-items: flex-start;
   margin-top: 40px;
   text-align: center;
-}
 
-/* Estilos para el contenedor de textContainerDos */
-.textContainerDos {
-  flex: 2;
-  border: 3px solid #3380aa;
-  border-radius: 15px;
-}
+  .textContainerDos {
+    flex: 2;
+    border: 3px solid #3380aa;
+    border-radius: 15px;
+  }
 
-/* Estilos para el contenedor de textContainerTres */
-.textContainerTres {
-  flex: 2;
-  margin-top: 220px;
-  margin-right: 160px;
-  border: 3px solid #3380aa;
-  border-radius: 15px;
-}
+  .textContainerTres {
+    flex: 2;
+    margin-top: 220px;
+    margin-right: 160px;
+    border: 3px solid #3380aa;
+    border-radius: 15px;
+  }
 
-/* Estilos para la imagen de los pinceles */
-.imgPincel {
-  width: 600px;
-  margin-top: 10px;
-  border-radius: 15px;
+  .imgPincel {
+    width: 600px;
+    margin-top: 10px;
+    border-radius: 15px;
+  }
 }
 
 /* Estilos de texto de pie de página */
@@ -189,67 +224,74 @@ main .contentboxUno:hover, main .contentboxDos:hover, main .contentboxTres:hover
 .content__total {
   padding: 20px;
   margin-right: 600px;
-}
-.content__total .contentTittleNos {
-  margin-left: 45px;
-  margin-bottom: 15px;
-}
-.content__total .contentFotoNosotros {
-  border-radius: 10px;
-}
-.content__total .contentTextNosotros {
-  width: 300px;
-  border: 3px solid #3380aa;
-  border-radius: 15px;
-  padding: 30px;
-  margin-top: 50px;
-  margin-bottom: 20px;
-}
-.content__total .contentFotoFrasco {
-  position: absolute;
-  bottom: 130px;
-  top: 140px;
-  right: 0;
-}
-.content__total .contentFotoFrasco img {
-  height: 200%;
-  width: 100%;
+
+  .contentTittleNos {
+    margin-left: 45px;
+    margin-bottom: 15px;
+  }
+
+  .contentFotoNosotros {
+    border-radius: 10px;
+  }
+
+  .contentTextNosotros {
+    width: 300px;
+    border: 3px solid #3380aa;
+    border-radius: 15px;
+    padding: 30px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+  }
+
+  .contentFotoFrasco {
+    position: relative;
+    margin-left: 800px;
+    img {
+      height: 550px;
+      width: 500px;
+    }
+  }
 }
 
 /* Estilos de secciones principales CONTACTO */
+
 .contentPartUno__contacto {
   text-align: center;
   padding: 20px;
-  background-color: #c49192;
-}
-.contentPartUno__contacto .titulo__contactoUno {
-  font-size: 24px;
-  color: #030303;
-  margin-top: 20px;
-  margin-bottom: 30px;
-}
-.contentPartUno__contacto .textUno__contacto {
-  font-size: 16px;
-  /* Tamaño de fuente del texto */
-  color: #0e0d0d;
-  /* Color del texto */
-}
-.contentPartUno__contacto .ubicacionTituloDos__contacto {
-  text-align: center;
-  padding: 20px;
-  background-color: #c2b4b4;
-  /* Color de fondo */
-  margin-top: 20px;
-}
-.contentPartUno__contacto .contactRow {
-  display: flex;
+  background-color: rgb(196, 145, 146, 0.5);
+
+  .titulo__contactoUno {
+    font-size: 24px;
+    color: #030303;
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+
+  .textUno__contacto {
+    font-size: 16px;
+    color: #0e0d0d;
+  }
 }
 
-.contentEnd {
-  text-align: center;
-  background-color: #c49192;
-  padding: 20px;
-  margin-top: 25px;
+.ubicacionTituloDos__contacto {
+  padding: 10px;
+  background-color: #c2b4b4;
+  margin-top: 20px;
+}
+
+.content_horario_direccion {
+  margin-left: 500px;
+  margin-bottom: 20px;
+
+  .contentHorario {
+    border-radius: 10px;
+    width: 320px
+  }
+
+  .contentDireccion {
+    border-radius: 10px;
+    width: 320px
+  }
 }
 
 .contentForm {
@@ -257,36 +299,22 @@ main .contentboxUno:hover, main .contentboxDos:hover, main .contentboxTres:hover
   width: 300px;
   margin: auto;
   gap: 30px;
-}
 
-.contentTerminos {
-  display: flex;
-  gap: 10px;
-}
+  .contentMasInfo {
+    text-align: center;
+  }
 
-.contentMasInfo {
-  text-align: center;
-}
+  .contentGoogleMaps {
+    margin-top: 15px;
+    margin-left: 380px;
+    margin-right: 10px;
+    height: 400px;
+  }
 
-.contentGoogleMaps {
-  margin-top: 15px;
-  margin-left: 380px;
-  margin-right: 10px;
-  height: 400px;
-}
-
-.contentHorario {
-  margin-top: 100px;
-  margin-left: 250px;
-  border: 3px solid #41738e;
-  border-radius: 10px;
-}
-
-.contentDireccion {
-  margin-top: 100px;
-  margin-left: 250px;
-  border: 3px solid #41738e;
-  border-radius: 10px;
+  .contentTerminos {
+    display: flex;
+    gap: 10px;
+  }
 }
 
 .dropdown {
@@ -294,37 +322,72 @@ main .contentboxUno:hover, main .contentboxDos:hover, main .contentboxTres:hover
 }
 
 @media (max-width: 768px) {
-  .contentList {
+  header {
+    justify-content: flex-end;
+  }
+
+  .logoKeramikeUno {
+    left: -70px;
+  }
+
+  .contentListDeso {
     display: none;
   }
+
+  .contentImgIconos {
+    display: none;
+  }
+
   .dropdown {
     display: block;
+    margin-right: 10px;
   }
-  .dropdown button {
-    background: transparent;
-    border: none;
+  .dropdown button{
+    background-color: transparent;
     color: #000000;
+    border: none;
+    width: 50px
+    }
+    .dropdown-toggle::after{
+    display: none;   
+ }
+ .dropdown-menu{
+  display: none;
+ }
   }
+
   .contentTodo {
     display: block;
     padding: 20px;
   }
-  .contentboxUno, .contentboxDos {
+
+  .contentboxUno,
+  .contentboxDos, .contentboxTres {
     margin-bottom: 10px;
+    color: rgb(14, 13, 13);
+
   }
+
   .contentRight {
     display: block;
     padding: 10px;
   }
-  .textContainerUno {
-    margin: auto;
-  }
+
   .contentLeft {
     display: block;
     padding: 10px;
   }
+
   .textContainerTres {
     margin: 10px auto;
   }
-}
- 
+  .content__total{
+    margin-right: 0px;
+  }
+  .contentPartUno__contacto{
+    background-color: rgb(196, 145, 146, 0.3) ;
+  }
+  .content_horario_direccion{
+    margin-left: 230px;
+  }
+/*# sourceMappingURL=style.css.map */
