--- a/scss/_carruselMain.scss
+++ b/scss/_carruselMain.scss
@@ -8,6 +8,7 @@ main {
       letter-spacing: 4.4px;
       word-spacing: 1.2px;
       color: #000000;
+      background: radial-gradient(circle, rgb(194, 180, 180) 0%, rgb(255, 255, 255) 64%);
       font-weight: 700;
       text-decoration: none;
       margin-top: 10px;
