--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,218 +1,16 @@
 
- @import"reset";
+@import"reset";
 @import"nav";
 @import"imgNav";
 @import"mainNav";
 @import"carruselMain";
 @import"cajasBlue";
+@import"contentRight";
+@import"contentLeft";
+@import"footer";
+@import"contentNosotrosUno";
+@import"contentContactoUno";
+@import"contentContactoDos";
+@import"formContacto";
 
-
-/* Estilos de la sección "Taller" */
-
-  .textContainerUno {
-    width: 500px;
-    margin-bottom: 120px;
-    margin-top: 20px;
-    text-align: center;
-    border: 3px solid #3380aa;
-    border-radius: 15px;
-  }
-
-  .tittleTaller {
-    font-size: 30px;
-  }
-
-  .imgTaller {
-    width: 600px;
-    margin-top: 10px;
-    border-radius: 15px;
-  }
-
-
-/* Estilos para el contenedor principal */
-.contentLeft {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  margin-top: 40px;
-  text-align: center;
-
-  .textContainerDos {
-    flex: 2;
-    border: 3px solid #3380aa;
-    border-radius: 15px;
-  }
-
-  .textContainerTres {
-    flex: 2;
-    margin-top: 220px;
-    margin-right: 160px;
-    border: 3px solid #3380aa;
-    border-radius: 15px;
-  }
-
-  .imgPincel {
-    width: 600px;
-    margin-top: 10px;
-    border-radius: 15px;
-  }
-}
-
-/* Estilos de texto de pie de página */
-.contentEnd {
-  text-align: center;
-  background-color: #c49192;
-  padding: 20px;
-  margin-top: 25px;
-}
-
-/* Estilos de secciones principales NOSOTROS */
-.content__total {
-  padding: 20px;
-  margin-right: 600px;
-
-  .contentTittleNos {
-    margin-left: 45px;
-    margin-bottom: 15px;
-  }
-
-  .contentFotoNosotros {
-    border-radius: 10px;
-  }
-
-  .contentTextNosotros {
-    width: 300px;
-    border: 3px solid #3380aa;
-    border-radius: 15px;
-    padding: 30px;
-    margin-top: 50px;
-    margin-bottom: 20px;
-  }
-
-  .contentFotoFrasco {
-    position: relative;
-    margin-left: 800px;
-    img {
-      height: 550px;
-      width: 500px;
-    }
-  }
-}
-
-/* Estilos de secciones principales CONTACTO */
-
-.contentPartUno__contacto {
-  text-align: center;
-  padding: 20px;
-  background-color: rgb(196, 145, 146, 0.5);
-
-  .titulo__contactoUno {
-    font-size: 24px;
-    color: #030303;
-    margin-top: 20px;
-    margin-bottom: 30px;
-  }
-
-  .textUno__contacto {
-    font-size: 16px;
-    color: #0e0d0d;
-  }
-}
-
-.ubicacionTituloDos__contacto {
-  padding: 10px;
-  background-color: #c2b4b4;
-  margin-top: 20px;
-}
-
-.content_horario_direccion {
-  margin-left: 500px;
-  margin-bottom: 20px;
-
-  .contentHorario {
-    border-radius: 10px;
-    width: 320px
-  }
-
-  .contentDireccion {
-    border-radius: 10px;
-    width: 320px
-  }
-}
-
-.contentForm {
-  display: grid;
-  width: 300px;
-  margin: auto;
-  gap: 30px;
-
-  .contentMasInfo {
-    text-align: center;
-  }
-
-  .contentGoogleMaps {
-    margin-top: 15px;
-    margin-left: 380px;
-    margin-right: 10px;
-    height: 400px;
-  }
-
-  .contentTerminos {
-    display: flex;
-    gap: 10px;
-  }
-}
-
-.dropdown {
-  display: none;
-}
-
-@media (max-width: 768px) {
-  header {
-    justify-content: flex-end;
-  }
-
-.logoKeramikeUno{
-margin-right: 65px;
-}
-  .contentListDeso {
-    display: none;
-  }
-
-  .contentImgIconos {
-    display: none;
-  }
-
-  .dropdown {
-    display: block;
-    margin-right: 10px;
-  }
-  .dropdown button{
-    background-color: transparent;
-    color: #000000;
-    border: none;
-    width: 50px
-    }
-    .dropdown-toggle::after{
-    display: none;   
- }
- .dropdown-menu{
-  display: none;
- }
-  }
-
- 
-
-  .textContainerTres {
-    margin: 10px auto;
-  }
-  .content__total{
-    margin-right: 0px;
-  }
-  .contentPartUno__contacto{
-    background-color: rgb(196, 145, 146, 0.3) ;
-  }
-  .content_horario_direccion{
-    margin-left: 230px;
-  }
 /*# sourceMappingURL=style.css.map */
