--- a/scss/_contentNosotrosUno.scss
+++ b/scss/_contentNosotrosUno.scss
@@ -1,21 +1,24 @@
 .contentTittleNos {
-    margin-left: 45px;
-    margin-bottom: 15px;
-    background: radial-gradient(circle, rgb(194, 180, 180) 0%, rgb(255, 255, 255) 64%);
-  }
+margin: auto;   
+margin-bottom: 15px;
+@extend %brushstroke 
+}
 
   .contentFotoNosotros {
     border-radius: 10px;
   }
   .contentTextNosotros {
-    width: 300px;
-    background: rgb(255,255,255);
-    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(65,115,142,1) 0%, rgba(255,255,255,1) 70%);
-    margin-top: 50px;
+    width: 500px;
+    border: 3px solid #3380aa;
+    border-radius: 15px;
+    padding: 30px;
+    margin: auto;
+    margin-top: 20px;
     margin-bottom: 20px;
   }
 
   .manosytorno{ 
+    margin: auto;
     height: 600px;
     width: 600px;
     border-radius: 15px;
