--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ main .carousel-inner {
 .contentboxTres {
   flex-basis: 30%;
   padding: 25px;
-  background-color: rgba(65, 115, 142, 0.5);
+  background-color: rgba(65, 115, 142, 0.502);
   border-radius: 30px;
   margin-left: 10px;
   margin-right: 10px;
@@ -308,6 +308,11 @@ main .carousel-inner {
   width: 300px;
   margin: auto;
   gap: 30px;
+}
+.contentForm .button__enviar {
+  margin: auto;
+  width: 100px;
+  background-color: rgba(65, 115, 142, 0.5019607843);
 }
 .contentForm .contentMasInfo {
   text-align: center;
