--- a/scss/_cajasBlue.scss
+++ b/scss/_cajasBlue.scss
@@ -9,7 +9,7 @@
   .contentboxTres {
     flex-basis: 30%;
     padding: 25px;
-    background-color: rgb(65, 115, 142, 0.5);
+    background-color: rgba(65, 115, 142, 0.502);
     border-radius: 30px;
     margin-left: 10px;
     margin-right: 10px;
