--- a/scss/_contentRight.scss
+++ b/scss/_contentRight.scss
@@ -30,3 +30,14 @@
   }
 
 }
+@media (max-width: 390px) {
+  .textContainerUno{
+width: 300px;
+margin-left: 45px;
+margin-top: 200px; 
+ }
+ .imgTaller{
+  width: 350px; 
+margin: auto;
+ }
+}
