--- a/css/style.css
+++ b/css/style.css
@@ -322,6 +322,21 @@ main .carousel-inner {
   border-radius: 15px;
 }
 
+@media (max-width: 400px) {
+  .contentFotoNosotros {
+    width: 350px;
+  }
+  .contentTextNosotros {
+    width: 350px;
+  }
+  .manosytorno {
+    width: 350px;
+    height: 350px;
+  }
+  .dropdown button {
+    border: none;
+  }
+}
 /* Estilos de secciones principales CONTACTO */
 .contentPartUno__contacto {
   text-align: center;
@@ -380,6 +395,18 @@ main .carousel-inner {
 @media (max-width: 768px) {
   .content_horario_direccion {
     margin: auto;
+  }
+  .dropdown button {
+    border: none;
+  }
+}
+@media (max-width: 400px) {
+  .contentGoogleMaps {
+    width: 350px;
+    margin: auto;
+  }
+  .dropdown button {
+    border: none;
   }
 }
 
