--- a/scss/_formContacto.scss
+++ b/scss/_formContacto.scss
@@ -29,4 +29,16 @@
     .content_horario_direccion{
       margin: auto;
     }
+    .dropdown button{
+      border: none;
+    }
+  }
+  @media (max-width: 400px) {
+    .contentGoogleMaps{
+      width: 350px;
+      margin: auto;
+    }
+    .dropdown button{
+      border: none;
+    }
   }
