--- a/scss/_contentLeft.scss
+++ b/scss/_contentLeft.scss
@@ -5,6 +5,7 @@
       padding: 30px;
       margin: auto;
       width: 700px;
+      box-shadow: 16px 14px 20px;
     }
   
     .textContainerTres {
@@ -15,6 +16,7 @@
       margin-top: 250px;
       margin-bottom: 100px;
       margin-left: 800px;
+      box-shadow: 16px 14px 20px;
     }
   
   .imgPincel {
