--- a/scss/_contentNosotrosUno.scss
+++ b/scss/_contentNosotrosUno.scss
@@ -15,6 +15,7 @@ margin-bottom: 15px;
     margin: auto;
     margin-top: 20px;
     margin-bottom: 20px;
+    box-shadow: 16px 14px 20px;
   }
 
   .manosytorno{ 
