--- a/scss/_contentRight.scss
+++ b/scss/_contentRight.scss
@@ -8,10 +8,8 @@
     border: 3px solid #3380aa;
     border-radius: 15px;
     padding: 30px;
-  }
-
-  .tittleTaller {
-    font-size: 30px;
+    box-shadow: 16px 14px 20px;
+    overflow: hidden;
   }
 
   .imgTaller {
