--- a/css/style.css
+++ b/css/style.css
@@ -214,10 +214,8 @@ main .carousel-inner {
   border: 3px solid #3380aa;
   border-radius: 15px;
   padding: 30px;
-}
-
-.tittleTaller {
-  font-size: 30px;
+  box-shadow: 16px 14px 20px;
+  overflow: hidden;
 }
 
 .imgTaller {
@@ -252,6 +250,7 @@ main .carousel-inner {
   padding: 30px;
   margin: auto;
   width: 700px;
+  box-shadow: 16px 14px 20px;
 }
 
 .textContainerTres {
@@ -262,6 +261,7 @@ main .carousel-inner {
   margin-top: 250px;
   margin-bottom: 100px;
   margin-left: 800px;
+  box-shadow: 16px 14px 20px;
 }
 
 .imgPincel {
@@ -313,6 +313,7 @@ main .carousel-inner {
   margin: auto;
   margin-top: 20px;
   margin-bottom: 20px;
+  box-shadow: 16px 14px 20px;
 }
 
 .manosytorno {
